Fixed horizontal scrollbar and added announcements

--- a/tranchui-latest.css
+++ b/tranchui-latest.css
@@ -214,7 +214,7 @@ input {
     margin: 0 auto;
     border-radius: 5px;
     border: 1px rgb(25, 25, 25) solid;
-    width: 95%;
+    width: 92%;
     height: 420vh;
   }
   .close {
